# tenant-application-base

./: README.md  flake.nix  pyproject.toml
nix/: devShells.nix
pythonedatenantapplication/: application.py
